spacing fixes

--- a/src/components/timelinecard.module.css
+++ b/src/components/timelinecard.module.css
@@ -1,6 +1,6 @@
 .cardContainer {
     position: absolute;
-    text-align: center;
+    text-align: left;
     width: 300px;
     z-index: 1;
 }
@@ -26,4 +26,10 @@
 .tagContainer {
     border-top: 2px solid lightgrey;
     padding: 8px;
+}
+
+.gradient {
+    background: linear-gradient(to right, rgba(0, 220, 255, 1) 0%, rgba(0, 255, 201, 1) 100%);
+    height: 4px;
+    width: 100%;
 }
